--- a/css/responsive.css
+++ b/css/responsive.css
@@ -181,20 +181,22 @@
         position: fixed;
         top: 0;
         left: 0;
-      
+
         grid-template-columns: 1fr 280px 2fr;
         grid-template-rows: 60% 40%;
         grid-template-areas:
             "item3 item2 item1"
             "item4 item5 item1";
     }
-    .menu::before{
+
+    .menu::before {
         left: 0;
         right: 0;
         content: '';
         position: absolute;
         opacity: 0;
     }
+
     .menu__item {
         height: 100%;
     }
@@ -349,20 +351,25 @@
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-/*
-    .menu {
-        width: 100%;
-        height: 100vh;
-        overflow: hidden;
-        position: fixed;
-        top: 0;
-        left: 0;
-        grid-template-columns: 18% 31% 51%;
-        grid-template-rows: 60% 40%;
-        grid-template-areas:
-            "item3 item2 item1"
-            "item4 item5 item1";
+@media only screen and (min-width: 1400px) {
+    .home-slider .carousel-caption h3 {
+        color: #262533;
+        text-align: left;
+        padding: 130px 225px 130px 122px;
+        font-size: 125px;
+        /* line-height: 85px; */
+        font-weight: 600;
+        letter-spacing: 0px;
+        margin: 0px auto 25px;
     }
-*/
+
+    .project-details--banner h1 {
+        text-align: left;
+        padding: 15rem;
+        font-size: 135px;
+        font-weight: 600;
+        letter-spacing: 0px;
+        margin: 0px auto 25px;
+        color: #fff;
+    }
 }
