--- a/css/responsive.css
+++ b/css/responsive.css
@@ -351,13 +351,13 @@
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1399px) {
     .home-slider .carousel-caption h3 {
         color: #262533;
         text-align: left;
         padding: 130px 225px 130px 122px;
         font-size: 125px;
-        /* line-height: 85px; */
+        line-height: 125px;
         font-weight: 600;
         letter-spacing: 0px;
         margin: 0px auto 25px;
